--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "json-server": "json-server --watch db.json --port 3100"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
