--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "json-server": "json-server --watch db.json --port 3100"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
