--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "dotenv": "^17.2.3",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-cookie": "^8.0.1",
     "react-dom": "19.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -28,6 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "supabase": "^2.58.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
